src/components/gallery/gallery.scss
.gallery {
  width: 100%;
  overflow: hidden;
}

.gallery > ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.gallery > ul > li {
  text-align: center;
  width: 100%;
  height: auto !important;
}

.gallery > ul > li > img {
  width: 100%;
}

